El form incluye un botón de reset de la máquina virtual

--- a/DebuggerZ80VirtualMachine/DebuggerZ80VirtualMachine/MainViewController.xib
+++ b/DebuggerZ80VirtualMachine/DebuggerZ80VirtualMachine/MainViewController.xib
@@ -39,6 +39,7 @@
                 <outlet property="LTextField" destination="IEB-yT-BH9" id="knx-J1-L92"/>
                 <outlet property="MTextField" destination="Nqe-KJ-V4t" id="UGG-W4-l5B"/>
                 <outlet property="PcTextField" destination="acV-eA-a6Z" id="L9d-f7-jfF"/>
+                <outlet property="RTextField" destination="juK-FG-dYS" id="WlE-dG-Lfm"/>
                 <outlet property="SpTextField" destination="6fd-ys-8vZ" id="NCK-dM-1mg"/>
                 <outlet property="TTextField" destination="TyK-Nb-vmq" id="GVk-j1-kmg"/>
                 <outlet property="instructionCounter" destination="XQG-A5-MUz" id="0EB-Dw-Qpc"/>
@@ -479,11 +480,11 @@
                 <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Up-h1-FVf">
                     <rect key="frame" x="15" y="20" width="677" height="257"/>
                     <clipView key="contentView" ambiguous="YES" id="IwX-tp-SAu">
-                        <rect key="frame" x="1" y="0.0" width="675" height="241"/>
+                        <rect key="frame" x="1" y="0.0" width="675" height="256"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" columnReordering="NO" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="2a3-Im-ERR" viewBased="YES" id="jqb-rA-lj6">
-                                <rect key="frame" x="10" y="0.0" width="1206" height="215"/>
+                                <rect key="frame" x="10" y="0.0" width="1206" height="230"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1075,7 +1076,7 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="lIu-SH-H6l">
-                        <rect key="frame" x="1" y="241" width="675" height="15"/>
+                        <rect key="frame" x="1" y="240" width="675" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="YgN-o2-S4L">
@@ -1138,7 +1139,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mCS-q9-eqz">
-                    <rect key="frame" x="18" y="315" width="81" height="17"/>
+                    <rect key="frame" x="18" y="290" width="81" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Instructions" id="tsv-kB-dxe">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -1146,13 +1147,39 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XQG-A5-MUz" customClass="ColorChangeTextField" customModule="DebuggerZ80VirtualMachine" customModuleProvider="target">
-                    <rect key="frame" x="102" y="315" width="66" height="17"/>
+                    <rect key="frame" x="102" y="290" width="66" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" identifier="PC" title="Label" id="UhN-r2-kq1">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SRG-X9-4C5">
+                    <rect key="frame" x="45" y="318" width="23" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="R" id="WIu-sc-gbH">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="juK-FG-dYS" customClass="ColorChangeTextField" customModule="DebuggerZ80VirtualMachine" customModuleProvider="target">
+                    <rect key="frame" x="74" y="315" width="29" height="22"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="eVt-3r-3qr">
+                        <font key="font" metaFont="systemBold"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cgs-K2-Jb3">
+                    <rect key="frame" x="621" y="321" width="129" height="32"/>
+                    <buttonCell key="cell" type="push" title="Reset" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="zLd-d2-QFu">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="resetClick:" target="-2" id="0ep-lf-WdX"/>
+                    </connections>
+                </button>
             </subviews>
             <point key="canvasLocation" x="614.5" y="478"/>
         </customView>
