--- a/DebuggerZ80VirtualMachine/DebuggerZ80VirtualMachine/MainViewController.xib
+++ b/DebuggerZ80VirtualMachine/DebuggerZ80VirtualMachine/MainViewController.xib
@@ -1163,6 +1163,16 @@
                         <action selector="resetClick:" target="-2" id="0ep-lf-WdX"/>
                     </connections>
                 </button>
+                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6KB-QK-lRU">
+                    <rect key="frame" x="621" y="288" width="129" height="32"/>
+                    <buttonCell key="cell" type="push" title="Load Test Prog." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="W0F-CM-LIt">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="loadTestProgram:" target="-2" id="6hz-8e-7Tz"/>
+                    </connections>
+                </button>
             </subviews>
             <point key="canvasLocation" x="614.5" y="478"/>
         </customView>
