Almost working version for real load. I get a "R Tape Loading Error" after a data block is loaded. Header block, with program name works right

--- a/Sems/Sems/Base.lproj/Main.storyboard
+++ b/Sems/Sems/Base.lproj/Main.storyboard
@@ -82,7 +82,7 @@
                                                 <action selector="openTape:" target="Ady-hI-5gd" id="ZxC-8f-MYD"/>
                                             </connections>
                                         </menuItem>
-                                        <menuItem title="Play" keyEquivalent="p" id="BTH-lR-3Fn">
+                                        <menuItem title="Play / Stop" keyEquivalent="p" id="BTH-lR-3Fn">
                                             <connections>
                                                 <action selector="playTape:" target="Ady-hI-5gd" id="z9N-0Z-JB1"/>
                                             </connections>
